Fixed an issue where gaps would form around images.

--- a/style.css
+++ b/style.css
@@ -852,7 +852,7 @@ tr {
 
 .message .body .inline-image img {
  max-width:100%;
- max-height:60vh;
+ max-height:40vh;
  border-radius: 5px;
 }
 
